--- a/html/actors/pc_sheet/talents_tab.html
+++ b/html/actors/pc_sheet/talents_tab.html
@@ -22,7 +22,7 @@
                     eval{@%path%.info.page.current}
                 </div>
 
-                <div class=" midrow" style="width:50%; white-space:nowrap; overflow:hidden; text-overflow:ellipsis">
+                <div class=" midrow" style="width:50%; overflow:hidden; text-overflow:ellipsis">
                     eval{@%path%.info.notes.current}
                 </div>
 
