--- a/html/actors/pc_sheet/skillstab_general.html
+++ b/html/actors/pc_sheet/skillstab_general.html
@@ -14,14 +14,14 @@
 <div class="skilltable">
     <bank target="genskill">
         <div class="flexrow skillrow">
-            <div class="skillname flexrow">
-                <div>
-                    <p>eval{@%path%.info.longname}</p>
+            <div class="skillname flexrow" style="width:60%">
+                <div style="width:80%">
+                    <p><b>eval{@%path%.info.longname}</b></p>
                 </div>
 
-                <div class="skillname selectchara">
+                <div class="skillname selectchara" style="width:20%; position:relative">
 
-                    <select class='' target='genskill.%index%.info.chara'>
+                    <select class='' target='genskill.%index%.info.chara' style="position:absolute; right:5%;">
                         <option value='0'>Br</option>
                         <option value='1'>Ag</option>
                         <option value="2">Int</option>
@@ -40,7 +40,7 @@
                 <input type='checkbox' target='%path%.info.career' check='1' uncheck='0' isChecked='eval{@%path%.info.career==1}' />
             </div>
 
-            <div style="width:50%">
+            <div style="width:40%">
                 <input type='checkbox' target='genskill.%index%.info.ranks' check='1' uncheck='0' isChecked='eval{@c.genskill.%index%.info.ranks>0}' />
                 <input type='checkbox' target='genskill.%index%.info.ranks' check='2' uncheck='1' isChecked='eval{@c.genskill.%index%.info.ranks>1}' />
                 <input type='checkbox' target='genskill.%index%.info.ranks' check='3' uncheck='2' isChecked='eval{@c.genskill.%index%.info.ranks>2}' />
@@ -48,7 +48,7 @@
                 <input type='checkbox' target='genskill.%index%.info.ranks' check='5' uncheck='4' isChecked='eval{@c.genskill.%index%.info.ranks>4}' />
             </div>
 
-            <div>
+            <div class="flexrow">
                 <div class="flexmiddle sheetbutton" style="float:right">ROLL
                     <click>
                         <var pool1='@c.genskill.%index%.info.ranks' pool2='((@%path%.info.chara==0)?(@c.stats.br):((@%path%.info.chara==1)?(@c.stats.ag):((@%path%.info.chara==2)?(@c.stats.int):((@skill.%index%.info.chara==3)?(@c.stats.cun):((@skill.%index%.info.chara==4)?(@c.stats.wp):(@c.stats.pre))))))'></var>
@@ -79,7 +79,7 @@
                             </div>
                         </prompt>
                         <chat roll='@prodice[proficiency]+@abdice[ability]+@boostdice[boost]+@chaldice[challenge]+@didice[difficulty]+@sbdice[setback]'
-                            flavor="eval{@name's @%path%.name test}" roll-ui='ui_poolResults' />
+                            flavor="eval{@name's @%path%.info.longname test}" roll-ui='ui_poolResults' />
                     </click>
                 </div>
                 <div class="glyphicon glyphicon-edit link" style="margin-right:3px">
